<resources>
    <string name="app_name">autoCarWash</string>
    <string name="about_app">О приложении</string>
    <string name="economy">Экономия времени</string>
    <string name="auto_payments">Автоматическая безналичная оплата</string>
    <string name="full_text_about_app">Приложение позволяет...</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registerLink"><u>Зарегистрироваться</u></string>
    <string name="registration">Регистрация</string>
    <string name="bonus">Бонусы</string>
    <string name="car_wash">Car Wash</string>
    <string name="user_agreement_checkbox_txt">Я согласен(-на) с условиями пользования</string>
    <string name="privacy_policy">Я ознакомился с политикой конфиденциальности</string>
    <string name="enter">Вход</string>
    <string name="enter_phone_nr">Введите номер телефона</string>
    <string name="enter_account">Войдите в аккаунт</string>
    <string name="code">Код подтверждения</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="send_code_to_email"><u>Отправить код на почту</u></string>
    <string name="about_txt">Приложение предназначено для комфортного и удобного пользования туннельной автомойкой.</string>
    <string name="service_agreement"><u>Условия оказания услуг</u></string>
    <string name="privacy_policy_about"><u>Политика конфиденциальности</u></string>
    <string name="add_car">Добавить авто</string>
    <string name="car">Автомобиль</string>
    <string name="edit_photo">Изменить фото</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="delete_data">Удалить данные</string>
    <string name="plate_number">Гос. номер</string>
    <string name="car_data">Данные автомобиля</string>
    <string name="carwash">CarWash</string>
    <string name="geolocation">Геолокация</string>
    <string name="language">Язык</string>
    <string name="russian">Русский</string>
    <string name="cloudpayment">Cloudpayment</string>
    <string name="card_number">Номер карты</string>
    <string name="validity">Срок действия</string>
    <string name="renew_automatically">Продлевать автоматически</string>
    <string name="add_another_card">Добавить другую карту</string>
    <string name="card_details">Детали карты</string>
    <string name="payment_system">Платежная система</string>
    <string name="mastercard">mastercard</string>
    <string name="phone_number">Телефон</string>
    <string name="bind_card">Привязать карту</string>
    <string name="region">Регион</string>
    <string name="positive_button_text">Хорошо</string>
    <string name="policy_check">Принять соглашение</string>
    <string name="code_check">Пожалуйста введите код подтверждения</string>
    <string name="phone_check">Проверьте номер телефона</string>
    <string name="payment_menu_text">Безналичная оплата</string>
    <string name="history_menu_text">История моек и платежей</string>
    <string name="parameters_menu_text">Параметры</string>
    <string name="help_menu_text">Поддержка</string>
    <string name="about_menu_text">О приложении</string>
    <string name="parameters_prefs_text">Параметры</string>
    <string name="geolocation_preference_text">geolocation</string>
    <string name="regions_preference_text">regions</string>
    <string name="language_preference_text">language</string>
    <string name="app_version">Версия 1.0.0 от 2019.08.06</string>
    <string name="logo">Logo</string>
    <string name="profile_image">Profile Image</string>
    <string name="add_profile_image">add profile image</string>
    <string name="fill_profile">Заполнить профиль</string>
    <string name="car_image">Car image</string>
    <string name="add_car_image">Add car button</string>
    <string name="user_data">Данные пользователя</string>
    <string name="hint_name">Имя *</string>
    <string name="hint_surname">Фамилия *</string>
    <string name="father_name">Отчество</string>
    <string name="hint_birthday">Дата рождения</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone">Телефон</string>
    <string name="fields_needed">* - обязательные поля для заполнения</string>
    <string name="save_data">Сохранить данные</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="icon">icon</string>
    <string name="account_icon">account icon</string>
    <string name="payment_method">Способ оплаты:</string>
    <string name="payment_amount">Сумма платежа:</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="button_arrow">button arrow</string>
    <string name="delete_icon">delete icon</string>
    <string name="hint_expire_date">MM/YY</string>
    <string name="card_logo">card logo</string>
    <string name="cvc">CVC</string>
    <string name="hint_cvc">***</string>
    <string name="add_payment_card">Add payment card</string>
    <string name="title_profile">Профиль</string>
    <string name="edit_data">Редактировать данные</string>
    <string name="car_no_data_found">Вы не добавили информацию об автомобиле. Хотите ввести данные?</string>
    <string name="add_auto">Добавить машину</string>
    <string name="no_data">Нет данных</string>
    <string name="example_full_name">Иван Иванов</string>
    <string name="example_phone_nr">+7 (999) 999-99-99</string>
    <string name="menu_icon">menu icon</string>
    <string name="region_name_example">Россия, Великие Луки</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="hint_phone_number">Например +7(999) 999-99-99</string>
    <string name="get_code">Получить код</string>
    <string name="enter_code">Введите код подтверждения</string>
    <string name="sms_question">Не получили смс?</string>
    <string name="full_address_example">Великие Луки, пр-т Октябрьский, 9Б</string>
    <string name="paid_to_date">Оплачено до 2020/08/08</string>
    <string name="time">23:59</string>
    <string name="registration_number">A 001 AA</string>
    <string name="registration_number_part2">60</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="enter_to_continue">Для авторизации или регистрации введите ваш номер телефона</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="next">Далее</string>
    <string name="enter_car_info">Введите данные автомобиля</string>
    <string name="save">Сохранить</string>
    <string name="rus">RUS</string>
    <string name="set_car_number_and_region">Укажите номер автомобиля и регион</string>
    <string name="x">Х</string>
    <string name="_0">0</string>
    <string name="_00">00</string>

</resources>
