<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="top|center"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/toolbar_title_txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/ic_title"
            android:text="@string/car_wash"
            android:textSize="18sp"
            android:contentDescription="@string/logo" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="top|center"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_avatar_img_id"
                android:layout_width="109dp"
                android:layout_height="109dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/custom_user"
                android:contentDescription="@string/profile_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name_txt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="8dp"
                    android:text="@string/example_full_name"
                    android:textColor="@color/colorDefaultText"
                    android:textSize="@dimen/heading_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_phone_txt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/example_phone_nr" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/location_icon_img_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_geo"
            android:contentDescription="@string/geolocation" />

        <TextView
            android:id="@+id/address_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/full_address_example" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/service_available_card_id"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paid_to_date_txt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/paid_to_date"
                android:textColor="@color/colorDefaultText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time_txt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/colorDefaultText"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registration_nr_txt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/registration_number"
                    android:textSize="@dimen/heading_text_size" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reg_nr_txt2_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registration_number_part2"
                        android:textColor="@color/colorDefaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/reg_nr_txt3_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rus" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>